LPS-47973 Split the message to title only

--- a/portal-impl/src/content/Language.properties
+++ b/portal-impl/src/content/Language.properties
@@ -782,6 +782,7 @@ add-x=Add {0}
 add-x-as-a-search-provider=Add {0} as a Search Provider
 add-x-in-x=Add {0} in {1}
 added=Added
+added-a-new-x=added a new {0}.
 additional-email-addresses=Additional Email Addresses
 additional-information=Additional Information
 additional-metadata-fields=Additional Metadata Fields
@@ -6551,6 +6552,7 @@ update-site-pages-variation=Update Site Pages Variation
 update-the-styles-on-this-page=Update the styles on this page.
 update-wiki=Update Wiki
 updated=Updated
+updated-a-x=updated a {0}.
 updates-are-available-for-liferay=Updates are available for Liferay. Click here to open the Update Manager for details.
 updates-available=Updates Available
 updating-the-data-definition-may-cause-data-loss=Updating the data definition may cause data loss.
@@ -6950,7 +6952,6 @@ x's-commits={0}'s Commits
 x's-commits-on-x={0}'s commits on {1}.
 x-added-a-comment={0} added a <a href="{1}">comment</a>.
 x-added-a-new-comment-to-x={0} added a new comment to {1}.
-x-added-a-new-x={0} added a new {1}.
 x-added-the-attachment-x={0} added the attachment {1}.
 x-added-the-page-x={0} added the page {1}.
 x-ago={0} Ago
@@ -7032,7 +7033,6 @@ x-suborganization={0} Suborganization
 x-suborganizations={0} Suborganizations
 x-subtype={0} Subtype
 x-updated-a-comment-to-x={0} updated a comment to {1}.
-x-updated-a-x={0} updated a {1}.
 x-updated-the-due-date={0} updated the due date.
 x-updated-the-page-to-version-x={0} updated the page to version {1}.
 x-user={0} User
