SourceFormatter - property should be in properties file in plugins

--- a/portal-impl/src/com/liferay/portal/tools/dependencies/source-formatter.properties
+++ b/portal-impl/src/com/liferay/portal/tools/dependencies/source-formatter.properties
@@ -116,8 +116,7 @@
         /ant-bnd/,\
         /markdown-converter/,\
         /osgi-util/,\
-        /registry-api/,\
-        /sync-engine-shared/
+        /registry-api/
 
     #
     # Input a list of comma delimited file names that are allowed to use
