--- a/portal-web/build.xml
+++ b/portal-web/build.xml
@@ -7,6 +7,7 @@
 
 	<property name="alloy.version" value="3.0.0pr2" />
 	<property name="alloy-font-awesome.version" value="1.0.0" />
+	<property name="alloyeditor.version" value="0.2" />
 	<property name="ckeditor.file" value="ckeditor_4.3.5_liferay.zip" />
 	<property name="scayt.file" value="scayt_4.3.5.zip" />
 	<property name="tinymce.file" value="tinymce_3.5.6.zip" />
@@ -77,6 +78,8 @@
 				<delete dir="docroot/html/css/portal/aui_deprecated.css" />
 				<delete dir="docroot/html/js/aui" />
 				<delete dir="docroot/html/themes/_unstyled/images/aui" />
+
+				<echo>${alloy.file}</echo>
 
 				<unzip src="third-party/${alloy.file}" dest="docroot/html/ALLOY_ZIP" />
 
@@ -219,6 +222,49 @@
 		<antcall target="build-alloy-font-awesome">
 			<param name="alloy.bootstrap.deploy" value="${alloy.bootstrap.deploy}" />
 		</antcall>
+	</target>
+
+	<target name="build-alloy-editor">
+		<path id="alloyeditor.zip.path">
+			<fileset dir="third-party">
+				<include name="alloy-editor-${alloyeditor.version}.zip" />
+			</fileset>
+		</path>
+
+		<property name="alloyeditor.zip.path" refid="alloyeditor.zip.path" />
+
+		<basename file="${alloyeditor.zip.path}" property="alloyeditor.file" />
+
+		<if>
+			<not>
+				<uptodate
+					srcfile="third-party/${alloyeditor.file}"
+					targetfile="docroot/html/js/editor/alloyeditor"
+				/>
+			</not>
+			<then>
+				<delete dir="docroot/html/js/editor/alloyeditor" />
+
+				<echo>${alloyeditor.file}</echo>
+
+				<unzip src="third-party/${alloyeditor.file}" dest="docroot/html/js/editor/_tmp" />
+
+				<copy todir="docroot/html/js/editor/alloyeditor" overwrite="true" preservelastmodified="true">
+					<fileset dir="docroot/html/js/editor/_tmp/alloy-editor-${alloyeditor.version}/alloy-editor" />
+				</copy>
+
+				<copy todir="docroot/html/js/editor/alloyeditor" overwrite="true" preservelastmodified="true">
+					<fileset dir="docroot/html/js/editor/alloyeditor_diffs" />
+				</copy>
+
+				<delete dir="docroot/html/js/editor/_tmp" />
+			</then>
+			<else>
+				<copy todir="docroot/html/js/editor/alloyeditor" preservelastmodified="true">
+					<fileset dir="docroot/html/js/editor/alloyeditor_diffs" />
+				</copy>
+			</else>
+		</if>
 	</target>
 
 	<target name="build-alloy-font-awesome">
@@ -766,6 +812,7 @@
 		<delete dir="classes" />
 		<delete dir="docroot/dtd" />
 		<delete dir="docroot/html/js/aui" />
+		<delete dir="docroot/html/js/editor/alloyeditor" />
 		<delete dir="docroot/html/js/editor/ckeditor" />
 		<delete dir="docroot/html/js/editor/tinymce" />
 		<delete dir="docroot/html/portal/aui" />
@@ -1043,6 +1090,7 @@ Please set the property "jdk.6.home" in build.properties.
 
 	<target name="deploy">
 		<antcall target="build-alloy" />
+		<antcall target="build-alloy-editor" />
 		<antcall target="build-ckeditor" />
 		<antcall target="build-dtd" />
 		<antcall target="build-tinymce" />
