--- a/modules/portal/portal-portlet-tracker/ivy.xml
+++ b/modules/portal/portal-portlet-tracker/ivy.xml
@@ -5,7 +5,9 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:noNamespaceSchemaLocation="http://ant.apache.org/ivy/schemas/ivy.xsd"
 >
-	<info module="${plugin.name}" organisation="com.liferay" />
+	<info module="${plugin.name}" organisation="com.liferay">
+		<extends extendType="configurations,description,info" location="${sdk.dir}/ivy.xml" module="com.liferay.sdk" organisation="com.liferay" revision="latest.integration" />
+	</info>
 
 	<dependencies defaultconf="default">
 		<dependency name="javax.servlet.jsp" org="org.glassfish.web" rev="2.3.3-b01" />
