--- a/modules/build.xml
+++ b/modules/build.xml
@@ -3,7 +3,7 @@
 
 <project>
 	<path id="plugins.includes.path">
-		<!--<dirset dir="apps/analytics" includes="*" />-->
+		<dirset dir="apps/xsl-content" includes="*" />
 		<dirset dir="core" includes="*" />
 		<dirset dir="portal" includes="*" />
 	</path>
