LPS-59594 Run format-source checks outside the portal

--- a/source-formatter.properties
+++ b/source-formatter.properties
@@ -184,6 +184,7 @@
         /gradle-util/,\
         /markdown-converter/,\
         /osgi-util/,\
+        /portal-tools-sharding-upgrader/,\
         /portal-wab-extender/,\
         /registry-api/,\
         /sync-engine/
