LPS-61229 Add new option to show the frontpage

--- a/portal-impl/src/content/Language.properties
+++ b/portal-impl/src/content/Language.properties
@@ -5001,6 +5001,7 @@ there-is-currently-1-process-in-progress-and-x-pending=There is currently 1 proc
 there-is-existing-form-data-please-export-and-delete-it-before-making-changes-to-the-fields=There is existing form data. Please export and delete it before making changes to the fields.
 there-is-no-device-recognition-provider-installed=There is no device recognition provider installed. It will not be possible to determine the characteristics of the devices accessing the portal. Please contact the portal administrator or install it from the Liferay Marketplace.
 there-is-no-selected-page=There is no selected page.
+there-is-no-x=There is no {0}.
 there-is-not-a-version-of-this-page-marked-as-ready-for-publication=There is not a version of this page marked as Ready for Publication.
 there-was-an-unexpected-error.-please-refresh-the-current-page=There was an unexpected error. Please refresh the current page.
 there-were-no-recipient-addresses=There were no recipient addresses.
