LPS-61229  Lang properties

--- a/portal-impl/src/content/Language.properties
+++ b/portal-impl/src/content/Language.properties
@@ -2008,6 +2008,7 @@ from-name=From Name
 from-this-location=From This location
 from-unit=From Unit
 from-x-to-x=From {0} to {1}
+frontpage=FrontPage
 ftp=FTP
 full=Full
 full-content=Full Content
@@ -2840,6 +2841,7 @@ modifiable=Modifiable
 modified=Modified
 modified-custom-range-example-range=e.g. 2005-7-28
 modified-date=Modified Date
+modified-x-ago=modified {0} ago.
 modify-the-friendly-url-of-the-pages-to-allow-their-propagation-from-the-site-template=Modify the friendly URL of the pages to allow their propagation from the site template.
 module-id=Module ID
 monday-abbreviation=M
