LPS-60128 Rename template for consistency.
Bootstrap based templates should be named after their class style.

--- a/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language.properties
+++ b/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language.properties
@@ -12,21 +12,21 @@ navigation-items-help=Navigation Entries
 navigation-util=Navigation Util
 nested-children=Nested Children
 nested-children-help=Nested Children
-portlet-display-template-description-blank-navigation-menu=Displays a navigation menu for the Classic theme.
 portlet-display-template-description-nav-pills=Displays a navigation menu with Bootstrap navigation pills.
 portlet-display-template-description-nav-pills-justified=Displays a navigation menu with justified Bootstrap navigation pills.
 portlet-display-template-description-nav-pills-stacked=Displays a navigation menu with stacked Bootstrap navigation pills.
 portlet-display-template-description-nav-tabs=Displays a navigation menu with Bootstrap navigation tabs.
 portlet-display-template-description-nav-tabs-justified=Displays a navigation menu with justified Bootstrap navigation tabs.
+portlet-display-template-description-navbar-blank=Displays a navigation menu with a minimally styled Bootstrap navigation bar.
 portlet-display-template-description-navbar-default=Displays a navigation menu with a Bootstrap navigation bar.
 portlet-display-template-description-navigation-menu-macro=Contains common macros for navigation menu templates.
 portlet-display-template-description-split-button-dropdowns=Displays a dropdown navigation menu with Bootstrap buttons.
-portlet-display-template-name-blank-navigation-menu=Minimally Styled Navbar
 portlet-display-template-name-nav-pills=Nav Pills
 portlet-display-template-name-nav-pills-justified=Nav Pills Justified
 portlet-display-template-name-nav-pills-stacked=Nav Pills Stacked
 portlet-display-template-name-nav-tabs=Nav Tabs
 portlet-display-template-name-nav-tabs-justified=Nav Tabs Justified
+portlet-display-template-name-navbar-blank=Minimally Styled Navbar
 portlet-display-template-name-navbar-default=Navbar Default
 portlet-display-template-name-navigation-menu-macro=Navigation Menu Macro
 portlet-display-template-name-split-button-dropdowns=Split Button Dropdowns
