LPS-60128 Add a basic navigation template that replicates legacy features

--- a/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language.properties
+++ b/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language.properties
@@ -12,6 +12,7 @@ navigation-items-help=Navigation Entries
 navigation-util=Navigation Util
 nested-children=Nested Children
 nested-children-help=Nested Children
+portlet-display-template-description-list-menu=Displays a navigation menu with a list.
 portlet-display-template-description-nav-pills=Displays a navigation menu with Bootstrap navigation pills.
 portlet-display-template-description-nav-pills-justified=Displays a navigation menu with justified Bootstrap navigation pills.
 portlet-display-template-description-nav-pills-stacked=Displays a navigation menu with stacked Bootstrap navigation pills.
@@ -21,6 +22,7 @@ portlet-display-template-description-navbar-blank=Displays a navigation menu wit
 portlet-display-template-description-navbar-default=Displays a navigation menu with a Bootstrap navigation bar.
 portlet-display-template-description-navigation-menu-macro=Contains common macros for navigation menu templates.
 portlet-display-template-description-split-button-dropdowns=Displays a dropdown navigation menu with Bootstrap buttons.
+portlet-display-template-name-list-menu=List Menu
 portlet-display-template-name-nav-pills=Nav Pills
 portlet-display-template-name-nav-pills-justified=Nav Pills Justified
 portlet-display-template-name-nav-pills-stacked=Nav Pills Stacked
