--- a/modules/frontend/frontend-js-metal-web/build.gradle
+++ b/modules/frontend/frontend-js-metal-web/build.gradle
@@ -3,17 +3,17 @@ import com.liferay.gradle.util.copy.StripPathSegmentsAction
 apply plugin: "com.liferay.cache"
 
 configurations {
-	crystalComponents
+	metalComponents
 }
 
-task buildCrystalComponents(type: Copy)
+task buildMetalComponents(type: Copy)
 
-String crystalComponentsVersion = "1.0.0-rc.3"
+String metalComponentsVersion = "1.0.0-rc.5"
 
 String defineRegex = "define(['exports', 'metal/src/core', 'metal/src/dom/dom', 'metal/src/object/object', 'metal/src/component/Component', 'metal/src/component/ComponentRegistry', 'metal/src/component/ComponentRenderer', 'metal/src/soy/SoyAop', 'metal/src/soy/SoyTemplates'], function (exports, _core, _dom, _object, _Component2, _ComponentRegistry, _ComponentRenderer2, _SoyAop, _SoyTemplates) {";
 String defineReplace = "define(['exports', 'soyutils', 'metal/src/core', 'metal/src/dom/dom', 'metal/src/object/object', 'metal/src/component/Component', 'metal/src/component/ComponentRegistry', 'metal/src/component/ComponentRenderer', 'metal/src/soy/SoyAop', 'metal/src/soy/SoyTemplates'], function (exports, _soyutils, _core, _dom, _object, _Component2, _ComponentRegistry, _ComponentRenderer2, _SoyAop, _SoyTemplates) {";
 
-buildCrystalComponents {
+buildMetalComponents {
 	eachFile new StripPathSegmentsAction(7)
 
 	eachFile {
@@ -34,11 +34,11 @@ buildCrystalComponents {
 	}
 
 	from {
-		zipTree(configurations.crystalComponents.singleFile)
+		zipTree(configurations.metalComponents.singleFile)
 	}
 
-	include "META-INF/resources/webjars/crystal-components/${crystalComponentsVersion}/build/amd-jquery/**"
-	include "META-INF/resources/webjars/crystal-components/${crystalComponentsVersion}/build/soy/**"
+	include "META-INF/resources/webjars/metal-components/${metalComponentsVersion}/build/amd-jquery/**"
+	include "META-INF/resources/webjars/metal-components/${metalComponentsVersion}/build/soy/**"
 
 	includeEmptyDirs = false
 	into "classes/META-INF/resources"
@@ -56,14 +56,14 @@ cache {
 }
 
 configJSModules {
-	dependsOn buildCrystalComponents
+	dependsOn buildMetalComponents
 	include "**/*.js"
 }
 
 dependencies {
 	compile group: "org.osgi", name: "org.osgi.core", version: "5.0.0"
 
-	crystalComponents group: "org.webjars.bower", name: "crystal-components", transitive: false, version: crystalComponentsVersion
+	metalComponents group: "org.webjars.bower", name: "metal-components", transitive: false, version: metalComponentsVersion
 }
 
 liferay {
