LRQA-20343 Add google properties to poshi runner

--- a/modules/test/poshi-runner/src/main/resources/poshi-runner.properties
+++ b/modules/test/poshi-runner/src/main/resources/poshi-runner.properties
@@ -20,6 +20,10 @@ component.names=portal-acceptance
 
 #fixed.issues=
 
+#google.api.key=
+#google.client.id=
+#google.client.secret=
+
 #ignore.errors=
 #ignore.errors.delimiter=
 #ignore.errors.file.name=
