--- a/portal-impl/src/system.properties
+++ b/portal-impl/src/system.properties
@@ -356,10 +356,8 @@
     org.terracotta.quartz.skipUpdateCheck=true
 
 ##
-## Secure
+## Security
 ##
-
-    com.liferay.portal.kernel.security.SecureRandomUtil.buffer.size=65536
 
     com.liferay.portal.kernel.io.ProtectedObjectInputStream.restricted.class.names=\
         org.apache.commons.collections.functors.CloneTransformer,\
@@ -375,3 +373,5 @@
         org.codehaus.groovy.runtime.MethodClosure,\
         org.springframework.beans.factory.ObjectFactory,\
         sun.reflect.annotation.AnnotationInvocationHandler
+
+    com.liferay.portal.kernel.security.SecureRandomUtil.buffer.size=65536
