--- a/modules/apps/product-navigation/product-navigation-site-administration/src/main/resources/content/Language.properties
+++ b/modules/apps/product-navigation/product-navigation-site-administration/src/main/resources/content/Language.properties
@@ -1,4 +1,4 @@
-choose-a-site=Chose a Site...
+choose-a-site=Choose a Site...
 go-to-other-site=Go to Other Site
 go-to-site=Go to Site
 manage-sites=Manage Sites
