LPS-60328 fix gradle files

--- a/modules/apps/site-navigation/site-navigation-taglib-freemarker-contributor/build.gradle
+++ b/modules/apps/site-navigation/site-navigation-taglib-freemarker-contributor/build.gradle
@@ -1,5 +1,5 @@
 dependencies {
-	compile project(":site-navigation:site-navigation-taglib")
+	compile project(":apps:site-navigation:site-navigation-taglib")
 }
 
 liferay {
