LPS-61197 Language.properties

--- a/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/content/Language.properties
+++ b/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/content/Language.properties
@@ -6,6 +6,7 @@ field-name-is-already-in-use=Field name is already in use.
 form-description=Form Description
 form-published-at-x=Form Published at: {0}
 javax.portlet.title.com_liferay_dynamic_data_lists_form_web_portlet_DDLFormPortlet=Form
+model.resource.com.liferay.dynamic.data.lists.model.DDLFormRecord=Form Record
 new-form=New Form
 new-x-form-submitted=New {0} Form Submitted
 no-forms-were-found=No forms were found.
