--- a/modules/build-buildscript.gradle
+++ b/modules/build-buildscript.gradle
@@ -2,6 +2,7 @@ dependencies {
 	classpath group: "com.liferay", name: "com.liferay.gradle.plugins", version: "1.0.47"
 	classpath group: "com.liferay", name: "com.liferay.gradle.plugins.alloy.taglib", version: "1.0.1"
 	classpath group: "com.liferay", name: "com.liferay.gradle.plugins.cache", version: "1.0.1"
+	classpath group: "com.liferay", name: "com.liferay.gradle.plugins.gulp", version: "1.0.0"
 	classpath group: "com.liferay", name: "com.liferay.gradle.plugins.maven.plugin.builder", version: "1.0.2"
 }
 
