--- a/portal-impl/src/content/Language.properties
+++ b/portal-impl/src/content/Language.properties
@@ -295,6 +295,7 @@ action.VIEW_USER=View User
 ## Messages
 ##
 
+open.sso.configuration.name=Open SSO
 1-day=1 Day
 1-minute=1 Minute
 1-month=1 Month
