--- a/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language.properties
+++ b/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language.properties
@@ -13,24 +13,24 @@ navigation-util=Navigation Util
 nested-children=Nested Children
 nested-children-help=Nested Children
 portlet-display-template-description-list-menu=Displays a navigation menu with a list.
-portlet-display-template-description-nav-pills=Displays a navigation menu with Bootstrap navigation pills.
-portlet-display-template-description-nav-pills-justified=Displays a navigation menu with justified Bootstrap navigation pills.
-portlet-display-template-description-nav-pills-stacked=Displays a navigation menu with stacked Bootstrap navigation pills.
-portlet-display-template-description-nav-tabs=Displays a navigation menu with Bootstrap navigation tabs.
-portlet-display-template-description-nav-tabs-justified=Displays a navigation menu with justified Bootstrap navigation tabs.
-portlet-display-template-description-navbar-blank=Displays a navigation menu with a minimally styled Bootstrap navigation bar.
-portlet-display-template-description-navbar-default=Displays a navigation menu with a Bootstrap navigation bar.
+portlet-display-template-description-nav-pills=Displays a navigation menu with navigation items shown as pills.
+portlet-display-template-description-nav-pills-justified=Displays a navigation menu with justified navigation items shown as pills.
+portlet-display-template-description-nav-pills-stacked=Displays a navigation menu with stacked navigation items shown as pills.
+portlet-display-template-description-nav-tabs=Displays a navigation menu with navigation items shown as tabs.
+portlet-display-template-description-nav-tabs-justified=Displays a navigation menu with justified navigation items shown as tabs.
+portlet-display-template-description-navbar-blank=Displays a navigation menu with a minimally styled navigation bar.
+portlet-display-template-description-navbar-default=Displays a navigation menu with a default styled navigation bar.
 portlet-display-template-description-navigation-menu-macro=Contains common macros for navigation menu templates.
-portlet-display-template-description-split-button-dropdowns=Displays a dropdown navigation menu with Bootstrap buttons.
+portlet-display-template-description-split-button-dropdowns=Displays a dropdown navigation menu with root menu items shown as buttons.
 portlet-display-template-name-list-menu=List Menu
-portlet-display-template-name-nav-pills=Nav Pills
-portlet-display-template-name-nav-pills-justified=Nav Pills Justified
-portlet-display-template-name-nav-pills-stacked=Nav Pills Stacked
-portlet-display-template-name-nav-tabs=Nav Tabs
-portlet-display-template-name-nav-tabs-justified=Nav Tabs Justified
-portlet-display-template-name-navbar-blank=Minimally Styled Navbar
-portlet-display-template-name-navbar-default=Navbar Default
-portlet-display-template-name-navigation-menu-macro=Navigation Menu Macro
+portlet-display-template-name-nav-pills=Pills Horizontal
+portlet-display-template-name-nav-pills-justified=Pills Justified
+portlet-display-template-name-nav-pills-stacked=Pills Stacked
+portlet-display-template-name-nav-tabs=Tabs
+portlet-display-template-name-nav-tabs-justified=Tabs Justified
+portlet-display-template-name-navbar-blank=Bar minimally styled
+portlet-display-template-name-navbar-default=Bar default styled
+portlet-display-template-name-navigation-menu-macro=Navigation common macros
 portlet-display-template-name-split-button-dropdowns=Split Button Dropdowns
 root-layout-level=Root Page Level
 root-layout-level-help=Root Page Level
