--- a/modules/portal/portal-scripting-javascript/src/main/resources/content/Language.properties
+++ b/modules/portal/portal-scripting-javascript/src/main/resources/content/Language.properties
@@ -1,2 +1,2 @@
-javascript.executor.configuration.name=Javascript Engine
+javascript.executor.configuration.name=JavaScript Engine
 forbidden.classes=Input a list of comma delimited class names that will never be available to user defined server side scripts. The special string "all_classes" disables access to any Java class. This property is only effective when using the Scripting service and invoking eval or exec methods.
