LPS-61070 Add "clean" task for themes

--- a/modules/build-theme.gradle
+++ b/modules/build-theme.gradle
@@ -1,10 +1,19 @@
 import groovy.json.JsonBuilder
 
+apply plugin: "base"
 apply plugin: "com.liferay.gulp"
 
 buildDir = file("build_gradle")
 
 task createLiferayThemeJson
+
+clean {
+	dependsOn cleanNpmInstall
+	dependsOn cleanCreateLiferayThemeJson
+
+	delete "build"
+	delete "dist"
+}
 
 createLiferayThemeJson {
 	File liferayThemeJsonFile = file("liferay-theme.json")
@@ -30,6 +39,8 @@ createLiferayThemeJson {
 	onlyIf {
 		!liferayThemeJsonFile.exists()
 	}
+
+	outputs.file liferayThemeJsonFile
 }
 
 tasks.whenTaskAdded {
