LPS-61070 Add the dependency even if the gulp* task has already been created

--- a/modules/build-theme.gradle
+++ b/modules/build-theme.gradle
@@ -43,7 +43,7 @@ createLiferayThemeJson {
 	outputs.file liferayThemeJsonFile
 }
 
-tasks.whenTaskAdded {
+tasks.all {
 	if (it.class.name.startsWith("com.liferay.gradle.plugins.gulp.ExecuteGulpTask")) {
 		it.dependsOn createLiferayThemeJson, npmInstall
 	}
