LPS-61070 Simplify project inclusions/exclusions
The slash at the end is important: https://docs.gradle.org/current/javadoc/org/gradle/api/tasks/util/PatternFilterable.html

--- a/modules/settings.gradle
+++ b/modules/settings.gradle
@@ -1,40 +1,40 @@
 FileTree fileTree = fileTree(rootDir) {
-	exclude "**/bin/**"
-	exclude "sdk/*/samples/build.gradle"
+	exclude "**/bin/"
+	exclude "sdk/*/samples/"
 
 	if (Boolean.getBoolean("portal.build")) {
-		exclude "portal-cache/portal-cache-memory/build.gradle"
-		exclude "portal/portal-cluster/build.gradle"
-		exclude "portal/portal-scripting-beanshell/build.gradle"
-		exclude "portal/portal-scripting-javascript/build.gradle"
-		exclude "portal/portal-scripting-python/build.gradle"
-		exclude "portal/portal-scripting-ruby/build.gradle"
-		exclude "portal/portal-search-solr/build.gradle"
-		exclude "portal/portal-taglib-aui-form-extension-sample/build.gradle"
-		exclude "sdk/**/build.gradle"
-		exclude "test/**/build.gradle"
-		exclude "third-party/**/build.gradle"
-		exclude "util/alloy-taglib/build.gradle"
-		exclude "util/ant-build-logger/build.gradle"
-		exclude "util/css-builder/build.gradle"
-		exclude "util/deployment-helper/build.gradle"
-		exclude "util/freemarker-osgi-bridge/build.gradle"
-		exclude "util/io-delta/build.gradle"
-		exclude "util/ip-geocoder-sample-web/build.gradle"
-		exclude "util/jasper-jspc/build.gradle"
-		exclude "util/javadoc-formatter/build.gradle"
-		exclude "util/lang-builder/build.gradle"
-		exclude "util/markdown-converter/build.gradle"
-		exclude "util/portal-tools-service-builder/build.gradle"
-		exclude "util/portal-tools-upgrade-table-builder/build.gradle"
-		exclude "util/portal-tools-wsdd-builder/build.gradle"
-		exclude "util/ruby-gems/build.gradle"
-		exclude "util/sass-compiler-api/build.gradle"
-		exclude "util/sass-compiler-ruby/build.gradle"
-		exclude "util/source-formatter/build.gradle"
-		exclude "util/sync-engine/build.gradle"
-		exclude "util/tld-formatter/build.gradle"
-		exclude "util/xml-formatter/build.gradle"
+		exclude "portal-cache/portal-cache-memory/"
+		exclude "portal/portal-cluster/"
+		exclude "portal/portal-scripting-beanshell/"
+		exclude "portal/portal-scripting-javascript/"
+		exclude "portal/portal-scripting-python/"
+		exclude "portal/portal-scripting-ruby/"
+		exclude "portal/portal-search-solr/"
+		exclude "portal/portal-taglib-aui-form-extension-sample/"
+		exclude "sdk/"
+		exclude "test/"
+		exclude "third-party/"
+		exclude "util/alloy-taglib/"
+		exclude "util/ant-build-logger/"
+		exclude "util/css-builder/"
+		exclude "util/deployment-helper/"
+		exclude "util/freemarker-osgi-bridge/"
+		exclude "util/io-delta/"
+		exclude "util/ip-geocoder-sample-web/"
+		exclude "util/jasper-jspc/"
+		exclude "util/javadoc-formatter/"
+		exclude "util/lang-builder/"
+		exclude "util/markdown-converter/"
+		exclude "util/portal-tools-service-builder/"
+		exclude "util/portal-tools-upgrade-table-builder/"
+		exclude "util/portal-tools-wsdd-builder/"
+		exclude "util/ruby-gems/"
+		exclude "util/sass-compiler-api/"
+		exclude "util/sass-compiler-ruby/"
+		exclude "util/source-formatter/"
+		exclude "util/sync-engine/"
+		exclude "util/tld-formatter/"
+		exclude "util/xml-formatter/"
 	}
 
 	include "*/**/build.gradle"
