--- a/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/content/Language.properties
+++ b/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/content/Language.properties
@@ -1,5 +1,5 @@
 data-providers=Data Providers
-ddl.form.web.configuration.name=Forms Application
+ddl.form.web.configuration.name=Forms
 displaying-form=Displaying Form
 enable-email-notification-for-each-form-submission=Enable email notification for each form submission.
 field-name-is-already-in-use=Field name is already in use.
