--- a/portal-impl/src/portal.properties
+++ b/portal-impl/src/portal.properties
@@ -1341,25 +1341,25 @@
 
     #
     # Input a list of comma delimited key value pair to set bootstrap loader
-    # properties for default cache.
+    # properties for the default cache.
     #
     ehcache.bootstrap.cache.loader.properties.default=
 
     #
     # Input a list of comma delimited key value pair to set bootstrap loader
-    # properties for specific cache.
+    # properties for a specific cache.
     #
     #ehcache.bootstrap.cache.loader.properties.${specific.cache.name}=
 
     #
     # Input a list of comma delimited key value pair to set cluster link
-    # replication properties for default cache.
+    # replication properties for the default cache.
     #
     ehcache.cluster.link.replicator.properties.default=
 
     #
     # Input a list of comma delimited key value pair to set cluster link
-    # replication properties for specific cache.
+    # replication properties for a specific cache.
     #
     #ehcache.cluster.link.replicator.properties.${specific.cache.name}=
     ehcache.cluster.link.replicator.properties.com.liferay.portal.kernel.template.TemplateResourceLoader.css=replicatePuts=false
