LPS-61493 Remove the word "Portal" from the name of the admin applications

--- a/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language.properties
@@ -43,10 +43,10 @@ enter-the-default-role-names-per-line-that-are-associated-with-newly-created-use
 enter-the-default-site-names-per-line-that-are-associated-with-newly-created-users=Enter the default site names <strong>per line</strong> that are associated with newly created users.
 enter-the-default-user-group-names-per-line-that-are-associated-with-newly-created-users=Enter the default user group names <strong>per line</strong> that are associated with newly created users.
 home-url=Home URL
-home-url-help=This is the home page of the portal. For example, if you want the home page to be http://localhost:8080/web/guest/home, set this to /web/guest/home.
+home-url-help=This is the home page of the liferay instance. For example, if you want the home page to be http://localhost:8080/web/guest/home, set this to /web/guest/home.
 how-do-users-authenticate=How do users authenticate?
-javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Settings is where most of the global portal settings are including names, authentication, default user associations, and mail host names.
-javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Portal Settings
+javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Settings is where most of the global instance settings are including names, authentication, default user associations, and mail host names.
+javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Instance Settings
 language-and-time-zone=Language and Time Zone
 mail-host-names=Mail Host Names
 main-configuration=Main Configuration
