LPS-60779 missing gradle dependencies

--- a/modules/apps/export-import/export-import-web/build.gradle
+++ b/modules/apps/export-import/export-import-web/build.gradle
@@ -14,6 +14,7 @@ dependencies {
 	compile project(":apps:application-list:application-list-api")
 	compile project(":apps:dynamic-data-mapping:dynamic-data-mapping-api")
 	compile project(":apps:staging:staging-lang")
+	compile project(":apps:trash:trash-taglib")
 	compile project(":portal:portal-background-task-api")
 	compile project(":portal:portal-upgrade")
 }
