--- a/modules/portal-security/portal-security-antisamy/build.gradle
+++ b/modules/portal-security/portal-security-antisamy/build.gradle
@@ -1,7 +1,8 @@
-task downloadSanitizerConfiguration(type: AntGetDownload)
-task processSanitizerConfiguration (type: Copy, dependsOn: downloadSanitizerConfiguration)
+import com.liferay.gradle.util.FileUtil
 
-processResources.dependsOn processSanitizerConfiguration
+task processSanitizerConfiguration(type: Copy)
+
+String sanitizerConfigurationUrl = "https://owaspantisamy.googlecode.com/files/antisamy-ebay-1.4.4.xml"
 
 dependencies {
 	compile group: "biz.aQute.bnd", name: "biz.aQute.bndlib", version: "2.4.1"
@@ -11,36 +12,34 @@ dependencies {
 	provided group: "org.owasp.antisamy", name: "antisamy", version: "1.5.3"
 }
 
-downloadSanitizerConfiguration {
-	sourceUrl = 'https://owaspantisamy.googlecode.com/files/antisamy-ebay-1.4.4.xml'
-	target = file ('build/tmp/antisamy-ebay-1.4.4.xml')
-}
-
-processSanitizerConfiguration {
-	from ('build/tmp') {
-		include ('antisamy-ebay-1.4.4.xml')
-		rename ('antisamy-ebay-1.4.4.xml', 'sanitizer-configuration.xml')
-		filter {
-			line -> line.contains('<directive name="maxInputSize" value="20000"/>') ? line.replace('20000', '200000') : line
-		}
-	}
-
-	into 'classes/META-INF/resources'
-}
-
 liferay {
 	deployDir = file("${liferayHome}/osgi/portal")
 }
 
-class AntGetDownload extends DefaultTask {
-	@Input
-	String sourceUrl
+processResources {
+	dependsOn processSanitizerConfiguration
+}
 
-	@OutputFile
-	File target
+processSanitizerConfiguration {
+	File sanitizerConfigurationFile = new File(sourceSets.main.output.resourcesDir, "META-INF/resources/sanitizer-configuration.xml")
 
-	@TaskAction
-	void download() {
-		ant.get(src: sourceUrl, dest: target)
+	filter {
+		String line ->
+
+		if (line.contains('<directive name="maxInputSize" value="20000"/>')) {
+			line = line.replace "20000", "200000"
+		}
+
+		return line
+	}
+
+	from {
+		FileUtil.get(project, sanitizerConfigurationUrl)
+	}
+
+	into sanitizerConfigurationFile.parentFile
+
+	rename {
+		sanitizerConfigurationFile.name
 	}
 }
