LPS-61498 lang keys

--- a/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_sr_RS_latin.properties
+++ b/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_sr_RS_latin.properties
@@ -43,10 +43,10 @@ enter-the-default-role-names-per-line-that-are-associated-with-newly-created-use
 enter-the-default-site-names-per-line-that-are-associated-with-newly-created-users=Unesite podrazumevane nazive sajtova <strong>po liniji</strong>da budu povezani sa novokreiranim korisnicima.
 enter-the-default-user-group-names-per-line-that-are-associated-with-newly-created-users=Unesite podrazumevana imena grupa korisnika <strong>po liniji</strong> koje su povezane sa novonastalim korisnicima.
 home-url=URL Početne Strane
-home-url-help=This is the home page of the portal. For example, if you want the home page to be http://localhost:8080/web/guest/home, set this to /web/guest/home. (Automatic Copy)
+home-url-help=This is the home page of the Liferay instance. For example, if you want the home page to be http://localhost:8080/web/guest/home, set this to /web/guest/home. (Automatic Copy)
 how-do-users-authenticate=Kako da korisnici potvrde identitet?
-javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Podešavanja su mesto većine globalnih portal podešavanja, uključujući imena, autentikaciju, podrazumevana udruženja korisnika i imena mejl hostova.
-javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Portal Podešavanja
+javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Settings is where most of the global instance settings are including names, authentication, default user associations, and mail host names. (Automatic Copy)
+javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Instance Settings (Automatic Copy)
 language-and-time-zone=Jezik i Vremenske Zone
 mail-host-names=Mejl Naziv Hosta
 main-configuration=Glavna Konfiguracija
