LPS-61510 - Making the usage of the word 'form' consistent

--- a/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/content/Language.properties
+++ b/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/content/Language.properties
@@ -1,6 +1,6 @@
-click-here-to-preview-the-form-in-a-new-window=Click here to preview the Form in a new window.
+click-here-to-preview-the-form-in-a-new-window=Click here to preview the form in a new window.
 copy-url=Copy URL
-copy-this-url-to-share-the-form=Copy this URL to share the Form
+copy-this-url-to-share-the-form=Copy this URL to share the form.
 data-providers=Data Providers
 ddl.form.web.configuration.name=Forms
 displaying-form=Displaying Form
@@ -8,7 +8,7 @@ enable-email-notification-for-each-form-submission=Enable email notification for
 field-name-is-already-in-use=Field name is already in use.
 form-description=Form Description
 javax.portlet.title.com_liferay_dynamic_data_lists_form_web_portlet_DDLFormPortlet=Form
-make-this-form-public=Make this form public
+make-this-form-public=Make this form public.
 model.resource.com.liferay.dynamic.data.lists.model.DDLFormRecord=Form Record
 new-form=New Form
 new-x-form-submitted=New {0} Form Submitted
