LPS-59594 Transitive is already the default value

--- a/modules/util/portal-tools-shard-builder/build.gradle
+++ b/modules/util/portal-tools-shard-builder/build.gradle
@@ -1,5 +1,5 @@
 dependencies {
-	compile group: "com.zaxxer", name: "HikariCP", transitive: true, version: "2.4.1"
+	compile group: "com.zaxxer", name: "HikariCP", version: "2.4.1"
 
 	provided fileTree(dir: "third-party", include: "*.jar")
 }
