LPS-59594 If we include the jars via Bnd, it is a provided configuration

--- a/modules/util/portal-tools-shard-builder/build.gradle
+++ b/modules/util/portal-tools-shard-builder/build.gradle
@@ -1,5 +1,4 @@
 dependencies {
-	compile group: "com.zaxxer", name: "HikariCP", version: "2.4.1"
-
 	provided fileTree(dir: "third-party", include: "*.jar")
+	provided group: "com.zaxxer", name: "HikariCP", version: "2.4.1"
 }
