LRQA-20359 Make 'test.assert.warning.exceptions' into a testcase property

--- a/test.properties
+++ b/test.properties
@@ -881,6 +881,7 @@
         solr.enabled,\
         test.assert.console.errors,\
         test.assert.javascript.errors,\
+        test.assert.warning.exceptions,\
         test.prepare.bundle.properties,\
         testcase.url,\
         testray.component.names,\
